Add article preview on home page

--- a/src/Static/Styles/home.css
+++ b/src/Static/Styles/home.css
@@ -2,3 +2,14 @@ main {
     min-height: 100vh;
     padding: var(--sp-huge) var(--sp-regular) !important;
 }
+
+main section {
+    display: flex;
+    flex-direction: column;
+}
+
+main section .top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
