--- a/src/Templates/article.mustache
+++ b/src/Templates/article.mustache
@@ -2,7 +2,7 @@
 <main class="container gap-regular">
     <div class="card">
         <h1 class="ts-hero tw-black">{{title}}</h1>
-        <span class="tf-mono">{{date}}</span>
+        <span><code>{{date}}</code></span>
     </div>
     {{article}}
 </main>
