--- a/src/Templates/blog_article.mustache
+++ b/src/Templates/blog_article.mustache
@@ -1,4 +1,5 @@
 <div class="article-card grid-col-4 card big gap-regular">
     <span class="tw-bold">{{title}}</span>
+    <span><code>{{date}}</code></span>
     <a href="{{link}}" class="btn">Read article</a>
 </div>
