--- a/src/Templates/navbar.mustache
+++ b/src/Templates/navbar.mustache
@@ -2,7 +2,7 @@
     <div class="container card big">
         <div class="left gap-regular">
             <li><a href="/" class="tc-default">Home</a></li>
-            <li><a href="/projects?page=1" class="tc-default">Projects</a></li>
+            <li><a href="/portfolio?page=1" class="tc-default">Portfolio</a></li>
             <li><a href="/blog?page=1" class="tc-default">Blog</a></li>
             <li><a href="/contacts" class="tc-default">Contacts</a></li>
         </div>
