Add everything related to projects and portfolio

--- a/src/Templates/home.mustache
+++ b/src/Templates/home.mustache
@@ -5,12 +5,14 @@
         <p class="ts-hero tw-bold">Hi! I'm a french developper and FOSS enjoyer from Paris</p>
     </section>
     <hr class="separator">
-    <section id="portfolio">
+    <section id="portfolio" class="gap-regular">
         <div class="top">
             <h2 class="ts-display tw-bold">Portfolio</h2>
             <a href="/portfolio" class="tc-primary">See more</a>
         </div>
-        <span class="ts-huge tw-bold tc-warning">Section under construction</span>
+        <div class="grid-row gap-regular">
+            {{projects_preview}}
+        </div>
     </section>
     <hr class="separator">
     <section id="blog" class="gap-regular">
