--- a/src/Templates/article.mustache
+++ b/src/Templates/article.mustache
@@ -1,6 +1,6 @@
 {{navbar}}
 <main class="container gap-regular">
-    <div class="card">
+    <div class="gap-regular">
         <h1 class="ts-hero tw-black">{{title}}</h1>
         <span><code>{{date}}</code></span>
     </div>
