Fix fragment to inject stylesheet once and adapt every fragment

--- a/src/Static/Styles/home.css
+++ b/src/Static/Styles/home.css
@@ -8,7 +8,7 @@ main section {
     flex-direction: column;
 }
 
-main section .top {
+main section .title {
     display: flex;
     align-items: center;
     justify-content: space-between;
