--- a/src/Templates/blog_article.mustache
+++ b/src/Templates/blog_article.mustache
@@ -1,5 +1,7 @@
 <div class="article-card grid-col-4 card big gap-regular">
-    <span class="tw-bold">{{title}}</span>
-    <span><code>{{date}}</code></span>
+    <div class="top gap-regular">
+        <span class="tw-bold">{{title}}</span>
+        <span><code>{{date}}</code></span>
+    </div>
     <a href="{{link}}" class="btn">Read article</a>
 </div>
