--- a/src/Templates/home.mustache
+++ b/src/Templates/home.mustache
@@ -6,7 +6,7 @@
     </section>
     <hr class="separator">
     <section id="portfolio" class="gap-regular">
-        <div class="top">
+        <div class="title">
             <h2 class="ts-display tw-bold">Portfolio</h2>
             <a href="/portfolio" class="tc-primary">See more</a>
         </div>
@@ -16,7 +16,7 @@
     </section>
     <hr class="separator">
     <section id="blog" class="gap-regular">
-        <div class="top">
+        <div class="title">
             <h2 class="ts-display tw-bold">Blog</h2>
             <a href="/blog?page=1" class="tc-primary">See more</a>
         </div>
