--- a/src/Templates/portfolio_project.mustache
+++ b/src/Templates/portfolio_project.mustache
@@ -1,6 +1,8 @@
-<div class="article-card grid-col-4 card big gap-regular">
-    <img src="{{img}}" alt="{{title}} presentation image">
-    <span class="tw-bold">{{title}}</span>
-    <p>{{description}}</p>
+<div class="project-card grid-col-4 card big gap-regular">
+    <div class="top gap-regular">
+        <img src="{{img}}" alt="{{title}} presentation image">
+        <span class="tw-bold">{{title}}</span>
+        <p>{{description}}</p>
+    </div>
     <a href="{{link}}" class="btn">See project</a>
 </div>
